--- a/app/slider/slider.css
+++ b/app/slider/slider.css
@@ -95,7 +95,7 @@
   gap: 5px;
   margin-bottom: 10px;
   list-style: none;
-  padding: 0;
+  padding: 0 0;
 }
 .slider-pagination__item {
   cursor: pointer;
