--- a/app/slider/slider.css
+++ b/app/slider/slider.css
@@ -41,6 +41,7 @@
 .slider-container {
   width: 100%;
   height: 50vh;
+  margin: 0;
   margin-bottom: 30px;
   overflow: hidden;
   display: -webkit-box;
